Fix tooltip text for ContentSettingImageView.

The image is non-interactive, so it doesn't display the tooltip. Set the tooltip on the ContentSettingImageView instead.

BUG=645140

Review-Url: https://codereview.chromium.org/2323973002
Cr-Commit-Position: refs/heads/master@{#417670}

Former-commit-id: 31c20ef1d76caf6e6f1a5489c30ef5136d56cf37